# pingoteca

./: CMakeLists.txt  README.md  main.c
audio/: audio.c  audio.h
content/: levels_data.c  levels_data.h
core/: config.c  config.h  engine.c  engine.h  states.c  states.h
game/: enemy.c  enemy.h  powerups.c  powerups.h
physics/: ball.c  ball.h  paddle.c  paddle.h
render/: visual_effects.c  visual_effects.h
ui/: cheat_system.c  cheat_system.h  dialog.c  dialog.h  text_renderer.c  text_renderer.h
utils/: file_utils.c  file_utils.h  string_utils.c  string_utils.h
